--- a/app/views/hooks/gitdownload/_view_repositories_show_contextual.erb
+++ b/app/views/hooks/gitdownload/_view_repositories_show_contextual.erb
@@ -1,19 +1,47 @@
 <div id="gitIcon"></div>
 
+<script type="text/javascript">
+	
+	GITDOWNLOAD_CONTROLLER = '<%= Setting.protocol.downcase %>://<%= Setting.host_name %>/gitdownload';
+	GITDOWNLOAD_ID = '<%= @repository.id %>';
+	GITDOWNLOAD_ERROR = '<%= l(:label_latest_revision_plural) %>';
+	
+	$(document).ready(function() {
+	    $('.clippy').clippy({
+		    width: 20,
+		    height: 20,
+		    flashvars: {
+			    label: '',
+			    wmode: "transparent"
+		    },
+		    clippy_path: '<%= Setting.protocol.downcase %>://<%= Setting.host_name %>/plugin_assets/gitdownload/javascripts/jquery.clippy/clippy.swf'
+	    });
+	});
+</script>
+
 <div id="gitOptions" title="RedGit">
 	<p>
-		<label for="gitUrl">GIT Repository URL</label>
-		<pre onclick="this.select();" id="gitUrl">http://redmine.tagwork-one.de/git/<%= @project.identifier %>/</pre>	
+		<h3>GIT Repository URL</h3>
+		<pre id="gitUrl">http://<%= Setting.host_name %>/<%= @project.identifier %>/</pre>
+		<span class="clippy" data-text="http://redmine.tagwork-one.de/git/<%= @project.identifier %>/"></span>	
 	</p>
-
 	<p>
-		<label for="gitBranch">Choose Branch</label>
-		<input id="gitBranch" readonly="readonly" type="text" value="http://redmine.tagwork-one.de/git/<%= @project.identifier %>/">	
+		<%= debug(@repository) %>
+		<h3>Choose Branch</h3>
+		<% if !@repository.branches.nil? && @repository.branches.length > 0 -%>
+			<%= select_tag :gitBranch, options_for_select([''] + @repository.branches, @rev), :id => 'gitBranch' %>
+		<% end -%>
 	</p>
-
 	<p>
-		<label for="gitRev">Choose Revision</label>
-		<input id="gitRev" readonly="readonly" type="text" value="http://redmine.tagwork-one.de/git/<%= @project.identifier %>/">	
+		<% if authorize_for('repositories', 'revisions') %>
+		  <% if @changesets && !@changesets.empty? %>
+		    <div id="revs">
+		    <h3><%= l(:label_latest_revision_plural) %></h3>
+		    <%= render :partial => 'gitrevisions',
+		              :locals => {:project => @project, :path => @path,
+		                          :revisions => @changesets, :entry => nil }%>
+		  <% end %>
+	      </div>
+		<% end %>
 	</p>
-
 </div>
