--- a/app/views/hooks/gitdownload/_view_repositories_show_contextual.erb
+++ b/app/views/hooks/gitdownload/_view_repositories_show_contextual.erb
@@ -20,20 +20,20 @@
 	});
 </script>
 
-<div id="gitOptions" title="RedGit">
+<div id="gitOptions" title="<%= l(:label_git_download) %>">
 	<div>
-		<h3>GIT Repository URL</h3>
-		<pre id="gitUrl">http://<%= Setting.host_name %>/<%= @project.identifier %>/</pre>
-		<span class="clippy" data-text="http://redmine.tagwork-one.de/git/<%= @project.identifier %>/"></span>	
+		<h3><%= l(:label_repository_url) %></h3>
+		<pre id="gitUrl"><%= Setting.plugin_gitdownload["git_url"] %><%= @project.identifier %>/</pre>
+		<span class="clippy" data-text="http://<%= Setting.host_name %>/<%= @project.identifier %>/<%= @project.identifier %>/"></span>	
 	</div>
 	<div class="left">
-		<h3>Choose Branch</h3>
+		<h3><%= l(:label_download_branch) %></h3>
 		<% if !@repository.branches.nil? && @repository.branches.length > 0 -%>
 			<%= select_tag :gitBranch, options_for_select([''] + @repository.branches, @rev), :id => 'gitBranch' %>
 		<% end -%>
 	</div>
 	<div class="right">
-		<h3>Format</h3>
+		<h3><%= l(:label_download_format) %></h3>
 		<%= select_tag :gitFormat, options_for_select(['tar.gz','zip']), :id => 'gitFormat' %>
 	</div>
 
