--- a/app/views/hooks/gitdownload/_view_repositories_show_contextual.erb
+++ b/app/views/hooks/gitdownload/_view_repositories_show_contextual.erb
@@ -1,55 +1,57 @@
-<div id="gitIcon"></div>
-
-<script type="text/javascript">
+<% if User.current.allowed_to?(:commit_access, @project) %>
+	<div id="gitIcon"></div>
 	
-	GITDOWNLOAD_CONTROLLER = '<%= Setting.protocol.downcase %>://<%= Setting.host_name %>/gitdownload';
-	GITDOWNLOAD_REPO = '<%= @project.identifier %>';
-	GITDOWNLOAD_ID = '<%= @repository.id %>';
-	GITDOWNLOAD_ERROR = '<%= l(:label_reporitory_error) %>';
+	<script type="text/javascript">
+		
+		GITDOWNLOAD_CONTROLLER = '<%= Setting.protocol.downcase %>://<%= Setting.host_name %>/gitdownload';
+		GITDOWNLOAD_REPO = '<%= @project.identifier %>';
+		GITDOWNLOAD_ID = '<%= @repository.id %>';
+		GITDOWNLOAD_ERROR = '<%= l(:label_reporitory_error) %>';
+		
+		$(document).ready(function() {
+		    $('.clippy').clippy({
+			    width: 20,
+			    height: 20,
+			    flashvars: {
+				    label: '',
+				    wmode: "transparent"
+			    },
+			    clippy_path: '<%= Setting.protocol.downcase %>://<%= Setting.host_name %>/plugin_assets/gitdownload/javascripts/jquery.clippy/clippy.swf'
+		    });
+		});
+	</script>
 	
-	$(document).ready(function() {
-	    $('.clippy').clippy({
-		    width: 20,
-		    height: 20,
-		    flashvars: {
-			    label: '',
-			    wmode: "transparent"
-		    },
-		    clippy_path: '<%= Setting.protocol.downcase %>://<%= Setting.host_name %>/plugin_assets/gitdownload/javascripts/jquery.clippy/clippy.swf'
-	    });
-	});
-</script>
-
-<div id="gitOptions" title="<%= l(:label_git_download) %>">
-
-	<% if Setting.plugin_gitdownload["git_show_repourl"] == 'on' %>
-		<div>
-			<h3><%= l(:label_repository_url) %></h3>
-			<pre id="gitUrl">git clone <%= Setting.plugin_gitdownload["git_url"] %><%= @project.identifier %>/</pre>
-			<span class="clippy" data-text="git clone <%= Setting.plugin_gitdownload["git_url"] %><%= @project.identifier %>/"></span>	
-		</div>
-	<% end %>
-	<div class="left">
-		<h3><%= l(:label_download_branch) %></h3>
-		<% if !@repository.branches.nil? && @repository.branches.length > 0 -%>
-			<%= select_tag :gitBranch, options_for_select([''] + @repository.branches, @rev), :id => 'gitBranch' %>
-		<% end -%>
-	</div>
-	<div class="right">
-		<h3><%= l(:label_download_format) %></h3>
-		<%= select_tag :gitFormat, options_for_select(['tar.gz','zip']), :id => 'gitFormat' %>
-	</div>
-	<% if Setting.plugin_gitdownload["git_show_revs"]  == 'on' %>
-		<% if authorize_for('repositories', 'revisions') %>
-		  <% if @changesets && !@changesets.empty? %>
-		    <div id="revs">
-		    <h3><%= l(:label_latest_revision_plural) %></h3>
-		    <%= render :partial => 'gitrevisions',
-		              :locals => {:project => @project, :path => @path,
-		                          :revisions => @changesets, :entry => nil }%>
-		  <% end %>
-	      </div>
+	<div id="gitOptions" title="<%= l(:label_git_download) %>">
+	
+		<% if Setting.plugin_gitdownload["git_show_repourl"] == 'on' %>
+			<div>
+				<h3><%= l(:label_repository_url) %></h3>
+				<pre id="gitUrl">git clone <%= Setting.plugin_gitdownload["git_url"] %><%= @project.identifier %>/</pre>
+				<span class="clippy" data-text="git clone <%= Setting.plugin_gitdownload["git_url"] %><%= @project.identifier %>/"></span>	
+			</div>
 		<% end %>
-	<% end %>
-	<div id="frame"></div>	
-</div>
+		<div class="left">
+			<h3><%= l(:label_download_branch) %></h3>
+			<% if !@repository.branches.nil? && @repository.branches.length > 0 -%>
+				<%= select_tag :gitBranch, options_for_select([''] + @repository.branches, @rev), :id => 'gitBranch' %>
+			<% end -%>
+		</div>
+		<div class="right">
+			<h3><%= l(:label_download_format) %></h3>
+			<%= select_tag :gitFormat, options_for_select(['tar.gz','zip']), :id => 'gitFormat' %>
+		</div>
+		<% if Setting.plugin_gitdownload["git_show_revs"]  == 'on' %>
+			<% if authorize_for('repositories', 'revisions') %>
+			  <% if @changesets && !@changesets.empty? %>
+			    <div id="revs">
+			    <h3><%= l(:label_latest_revision_plural) %></h3>
+			    <%= render :partial => 'gitrevisions',
+			              :locals => {:project => @project, :path => @path,
+			                          :revisions => @changesets, :entry => nil }%>
+			  <% end %>
+		      </div>
+			<% end %>
+		<% end %>
+		<div id="frame"></div>	
+	</div>
+<% end %>
