--- a/assets/stylesheets/application.css
+++ b/assets/stylesheets/application.css
@@ -18,23 +18,31 @@
 	display: block;
 }
 
-#gitOptions #gitUrl {
-	text-align: center;
-}
-
-#gitOptions pre {
+#gitUrl {
 	border: 1px solid #999;
 	background: #dedede;
 	border-radius: 3px;
 	padding: 7px 0 5px 26px;
-	overflow: hidden;
+	overflow-y: auto;
+	text-align: center;
 }
 
-#gitOptions object {
-	margin-top: -37px;
+div.git #gitUrl {
+	padding: 4px 0 14px 26px !important;
+	border: 0px;
+	background: none;
+	text-align: left;
+}
+
+div.git object, #gitOptions object {
+	margin-top: -35px;
 	margin-left: 2px;
 	position: absolute;
 	border:none;
+}
+
+div.git object {
+	margin-top: -42px;
 }
 
 
@@ -78,4 +86,10 @@
 	width: 1px;
 	height: 1px;
 	overflow: hidden;
+}
+
+div.git h3 {
+	background: url(../images/git_24.png) no-repeat left center;
+	background-size: 16px 16px;
+	padding-left: 20px;
 }
