--- a/app/views/hooks/gitdownload/_view_repositories_show_contextual.erb
+++ b/app/views/hooks/gitdownload/_view_repositories_show_contextual.erb
@@ -43,6 +43,7 @@
 		<div class="right">
 			<h3><%= l(:label_download_format) %></h3>
 			<%= select_tag :gitFormat, options_for_select(['tar.gz','tar.bz2','zip']), :id => 'gitFormat' %>
+			<input id="gitType" type="hidden" value="all">
 		</div>
 		<% if Setting.plugin_gitdownload["git_show_revs"]  == 'on' %>
 			<% if authorize_for('repositories', 'revisions') %>
