--- a/app/views/settings/_gitdownload.html.erb
+++ b/app/views/settings/_gitdownload.html.erb
@@ -23,7 +23,7 @@
 	</p>
 	<p>
 		<label for="git_repo_create_path"><%= l(:git_repo_create_path) %></label>
-	    <input type="text" id="git_repo_create_path" value="<%= settings["git_repo_create_path"] %>" name="settings[git_repo_create_path]" >
+	    <input style="width: 300px;" type="text" id="git_repo_create_path" value="<%= settings["git_repo_create_path"] %>" name="settings[git_repo_create_path]" >
 	</p>
 	<p>
 		<label for="git_auto_create_repo"><%= l(:git_auto_create_repo) %></label>
