--- a/app/views/settings/_gitdownload.html.erb
+++ b/app/views/settings/_gitdownload.html.erb
@@ -40,15 +40,13 @@
     email = you@example.com
 <% else %>
 <%= settings["git_configfile"] %>
-<% end %>
-	    </textarea>
+<% end %></textarea>
 	    <em class="info">
             <b>Minimum required config example:</b><br>
             [user]<br>
             &nbsp;&nbsp;name = Your Name<br>
             &nbsp;&nbsp;email = you@example.com<br>
         </em>
-
 	</p>
 	<p>
 		<label for="git_copyfiles"><%= l(:git_copyfiles) %></label>
