--- a/assets/stylesheets/application.css
+++ b/assets/stylesheets/application.css
@@ -17,7 +17,7 @@
 
 #gitOptions #gitUrl {
     width: 100% !important;
-    padding-left: 0px;
+    padding-left: 0;
     margin-bottom: 16px;
 }
 
@@ -48,8 +48,8 @@ div.git {
     background-position: center center;
     background-color: #bebebe;
     border: 0;
-    top: 0px;
-    right: 0px;
+    top: 0;
+    right: 0;
     float: right;
     position: absolute;
 }
@@ -123,10 +123,10 @@ div.git h3 {
 
 #generateSpinner {
     position: fixed;
-    top: 0px;
-    right: 0px;
-    bottom: 0px;
-    left: 0px;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
     background: rgba(0,0,0,0.6);
     z-index: 1500;
 }
@@ -206,8 +206,8 @@ div.git h3 {
 }
 
 .changeset-list li.change.folder, .changeset-list ul {
-    padding: 0px !important;
-    padding-left: 0px !important;
+    padding: 0 !important;
+    padding-left: 0 !important;
     background: none !important;
 }
 
@@ -218,6 +218,6 @@ div.git h3 {
 
 @media screen and (max-width: 899px) {
     div.git .copyInput {
-        padding:4px 0 4px 20px!important;
+        padding: 4px 0 4px 20px !important;
     }
 }
