--- a/assets/stylesheets/application.css
+++ b/assets/stylesheets/application.css
@@ -1,6 +1,6 @@
 #gitIcon {
     float: right;
-    background: url("../images/git_icon.png") no-repeat center center;
+    background: url('../images/git_icon.png') no-repeat center center;
     height: 24px;
     margin: 4px 0 0 4px;
     width: 67px;
@@ -43,7 +43,7 @@ div.git {
 .clipboard {
     width: 9%;
     height: 30px;
-    background: url("../images/fi-clipboard.svg") no-repeat;
+    background: url('../images/fi-clipboard.svg') no-repeat;
     background-size: 24px 24px;
     background-position: center center;
     background-color: #bebebe;
@@ -63,9 +63,8 @@ div.git {
 }
 
 div.git .copyInput {
-    padding: 7px 0 4px 20px!important;
+    padding: 7px 0 4px 20px !important;
     border: 0;
-    display: block;
     background: none;
     text-align: left;
     display: block;
@@ -115,7 +114,7 @@ div.git .copyInput {
 }
 
 div.git h3 {
-    background: url("../images/git_24.png") no-repeat left center;
+    background: url('../images/git_24.png') no-repeat left center;
     background-size: 17px 16px;
     padding-left: 20px;
 }
@@ -133,7 +132,7 @@ div.git h3 {
 .spinText {
     text-align: center;
     font-size: 30px;
-    color: rgba(255,255,255,0.7);
+    color: rgba(255,255,255,.7);
 }
 
 /* SPINNER */
@@ -146,7 +145,7 @@ div.git h3 {
 }
 
 .spinner > div {
-  background-color: rgba(255,255,255,0.7);
+  background-color: rgba(255,255,255,.7);
   height: 100%;
   width: 10px;
   margin: 0 10px;
